@startuml

skinparam backgroundColor white
skinparam shadowing false
skinparam defaultFontName Arial
skinparam defaultFontSize 14
skinparam dpi 150
skinparam classAttributeIconSize 0
skinparam linetype polyline
skinparam nodesep 45
skinparam ranksep 45
skinparam ArrowThickness 1.5
skinparam packageStyle folder

skinparam class {
    BackgroundColor white
    BorderColor #444444
    FontColor black
    HeaderBackgroundColor white
}

skinparam package {
    BackgroundColor white
    BorderColor #444444
    FontColor black
}

hide circle
top to bottom direction

package "Enumerations" as EN {
    enum RebalancingStatus <<enumeration>> {
        TRIGGERED
        COMPLETED
        CANCELLED
    }

    enum NotificationType <<enumeration>> {
        VEHICLE_ASSIGNED
        VEHICLE_ARRIVING
        VEHICLE_ARRIVED
        RIDE_STATUS_CHANGED
    }

    enum RequestStatus <<enumeration>> {
        PENDING
        ACCEPTED
        REJECTED
        CANCELLED
        COMPLETED
    }

    enum RobotaxiState <<enumeration>> {
        AVAILABLE
        ASSIGNED
        ARRIVING
        ARRIVED
        IN_RIDE
        MAINTENANCE
    }

    RebalancingStatus -[hidden]right- RequestStatus
    RequestStatus -[hidden]right- RobotaxiState
    RequestStatus -[hidden]down- NotificationType
}

class FleetOperator {
    - operatorID: String
}

class AllocationStrategy <<abstract>> {
    - name: String
}

class NearestAvailableStrategy {
}

class MinimumETAStrategy {
}

class RideRequest <<abstract>> {
    - requestID: String
    - status: RequestStatus
    - creationTime: DateTime
}

class Passenger {
    - phoneNumber: String
}

class Notification {
    - notificationID: String
    - message: String
    - creationTime: DateTime
    - type: NotificationType
}

class Robotaxi {
    - robotaxiID: String
    - currentPosition: GNSSPose
    - state: RobotaxiState
}

class Zone {
    - zoneID: String
    - zoneName: String
    - expectedDemand: Real
}

class RebalancingAction {
    - actionID: String
    - status: RebalancingStatus
    - creationTime: DateTime
}

' =========================
' Layout constraints
' =========================

EN -[hidden]down- FleetOperator

FleetOperator -[hidden]right- Passenger

NearestAvailableStrategy -[hidden]down- MinimumETAStrategy

AllocationStrategy -[hidden]down- RebalancingAction
MinimumETAStrategy -[hidden]down- Zone

' Keep allocation strategy to the left of ride requests
AllocationStrategy -[hidden]right- RideRequest

' =========================
' Generalizations
' =========================

NearestAvailableStrategy -right-|> AllocationStrategy
MinimumETAStrategy -right-|> AllocationStrategy

' =========================
' Dependencies
' =========================

FleetOperator -down-> AllocationStrategy : can select

RideRequest -left-> AllocationStrategy : allocation uses

' =========================
' Associations
' =========================

Notification "0..*" -up-> "1" Passenger : sent to
Notification "0..*" -left-> "0..1" RideRequest : refers to

RebalancingAction "0..*" -left-> "1" Zone : targets
RebalancingAction "0..*\n\n\n\n" -down-> "1" Robotaxi : involves

Robotaxi "0..*" -up-> "1" Zone : located in

@enduml